Stupid coaching main components, no CSS

--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,8 +1,7 @@
-<div id="navbar">
-<h1>Hello, I am AskMe.</h1>
-</div>
+<h1>Stupid Coaching.</h1>
 
-<form action="/ask" data-turbo="false">
-  <input type="text" name="ask" placeholder="Ask a question...">
+<form action="/answer" data-turbo="false">
+  <input type="text" name="question" placeholder="Ask Coach a question...">
   <input type="submit" value="Ask!">
+  <%# <a href="ANCHOR_URL">ANCHOR_TEXT</a> %>
 </form>
